feat/add swagger - add swagger comment - add CORS middleware - modify README.md - modify docker-compose.yml and Dockerfile     - change `tail -f /dev/null` to `sleep infinity`
